# motion-stack-2

./: .gitignore  README.md  client.json5  pixi.toml  pyright_config.json  pyrightconfig.json  router.json5
src/moonbot_builder/: pyproject.toml
src/moonbot_builder/moonbot_builder/: __init__.py  launch.py
src/moonbot_builder/moonbot_builder/assemblies/: alone.py  cargo.py  cargo_v2.py  chain.py  dragon.py  minimal.py  output.py  parallel.py  tricycle.py  triple_dragon.py  utils.py  vehicle.py  vehicule.py
src/moonbot_builder/moonbot_builder/modules/: base.py  gusta.py  hero.py  id_mapping.py  realman.py
src/moonbot_builder/moonbot_builder/urdf/: __init__.py  base.py  gusta.py  hero.py  realman.py
src/motion_stack/: ms_test.log.jsonl  pyproject.toml
src/motion_stack/motion_stack/: __init__.py  logger.py  lvl0_loopback.py  lvl1.py  lvl1_rerun_hook.py  lvl1_rework.py
src/motion_stack/motion_stack/lvl1/: __init__.py  _rerun_tf.py  core.py  joint_api.py  lvl0_loopback.py  rerun_bridge.py  rerun_hook.py
src/motion_stack/motion_stack/lvl2/: core.py  ik_api.py
src/motion_stack/motion_stack/rtb_fix/: fixed_urdf.py  patch.py
src/motion_stack/motion_stack/utils/: hypersphere_clamp.py  joint_mapper.py  joint_state.py  math.py  pose_state.py  printing.py  robot_parsing.py  static_executor.py  time.py  urdf_light.py
src/motion_stack/tests/: conftest.py  test_imports.py  test_time.py
src/motion_stack/tests/test_joints/: m_zero.urdf  test_buffer.py  test_ik_syncer.py  test_joint_state.py  test_lvl1.py  test_lvl2.py  test_pipeline.py  test_remapper.py
src/motion_stack_core/: __init__.py  lvl1_joint.py  lvl1_pipeline.py  lvl1_rework.py  lvl2_ik.py  pyproject.toml
src/motion_stack_core/rtb_fix/: patch.py
src/motion_stack_core/utils/: async_base.py  csv.py  hypersphere_clamp.py  joint_mapper.py  joint_state.py  pose.py  printing.py
src/ms_moonbot_zero/: pyproject.toml
src/ms_moonbot_zero/ms_moonbot_zero/: __init__.py  api_demo.py  lvl1.py  mz_launcher.py  pyzeros_api_demo.py  robot_demo.py
src/ms_moonbot_zero/ms_moonbot_zero/assets/: moonbot_zero.jinja.urdf
src/ms_moonbot_zero/ms_moonbot_zero/assets/meshes/: Leg1_Link1.STL  Leg1_Link2.STL  Leg1_Link3.STL  Leg2_Link1.STL  Leg2_Link2.STL  Leg2_Link3.STL  Leg3_Link1.STL  Leg3_Link2.STL  Leg3_Link3.STL  Leg4_Link1.STL  Leg4_Link2.STL  Leg4_Link3.STL  base_link.STL
src/ms_pyzeros_bridge/: pyproject.toml
src/ms_pyzeros_bridge/ms_pyzeros_bridge/: debug  lvl1_exec.py  lvl1_pyzeros.py  pyzeros_api_demo.py  rerun_viz.py  utils.py
src/ms_pyzeros_bridge/ms_pyzeros_bridge/lvl2/: lvl2_exec.py  lvl2_pyzeros.py  utils_pose.py
src/ms_zenoh_bridge/: pyproject.toml
src/ms_zenoh_bridge/ms_zenoh_bridge/: lvl1_exec.py  lvl1_zenoh.py  rerun_viz.py  utils.py  zenoh_api_demo.py
src/ms_zenoh_bridge/ms_zenoh_bridge/lvl2/: lvl2_exec.py  lvl2_zenoh.py  utils_pose.py
