[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=58.2" ]

[project]
name = "motion-stack"
version = "0.0.1"
description = "TODO"
readme = "README.md"
keywords = [ "asyncio", "robotics" ]
license = "MIT"
authors = [ { name = "Elian NEPPEL", email = "elian.dev@posteo.com" } ]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Networking",
]
dependencies = [
  "asyncio-for-robotics",
  "colorama",
  "dacite",
  "gogo-keyboard",
  "np2typing",
  "numpy>1.20",
  "numpy-quaternion",
  "rerun-sdk",
  "roboticstoolbox-python",
  "ujson",
  "urwid",
  "xacro",
]
optional-dependencies = {}
urls.Homepage = "https://github.com/2lian/asyncio-gazebo"
urls.Issues = "https://github.com/2lian/asyncio-gazebo/issues"
urls.Repository = "https://github.com/2lian/asyncio-gazebo"

[tool.setuptools]
package-data.motion_stack = [ "py.typed" ]
packages.find.include = [ "motion_stack", "motion_stack.*" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
