[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=58.2" ]

[project]
name = "ms-moonbot-zero"
version = "0.0.1"
description = "TODO"
readme = "README.md"
license = "MIT"
authors = [ { name = "Elian NEPPEL", email = "elian.dev@posteo.com" } ]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "jinja2",
  "motion-stack",
]

[tool.setuptools]
package-data.ms_moonbot_zero = [
  "py.typed",
  "assets/moonbot_zero.jinja.urdf",
  "assets/meshes/*.STL",
]
packages.find.include = [ "ms_moonbot_zero", "ms_moonbot_zero.*" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
