[project]
name = "ms_pyzeros_bridge"
version = "0.0.1"
description = "TODO"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Elian NEPPEL", email = "elian.dev@posteo.com" }
]
requires-python = ">=3.10,<3.15"

dependencies = [
"motion_stack",
]

[build-system]
requires = ["setuptools >= 58.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ms_pyzeros_bridge", "ms_pyzeros_bridge.*"]

[tool.setuptools.package-data]
"ms_pyzeros_bridge" = [
  "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

